Fixed double scroll home container

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -59,6 +59,14 @@ html {
   .main-container {
     /* display: inline; */
   }
+
+  .home-container{
+       /* Make unscrollable
+     since app is now scrollable */
+     height: 100%;
+     overflow: hidden;
+     margin: 0;
+  }
   .main-menu-container {
     width: 100%;
 
